# ndscape

./: .gitattributes  .gitignore  CITATION.cff  LICENSE  README.md  config.py  core.py  paper_artifact.md  pyproject.toml  pytest.ini  reproduce.py  requirements.txt  run_datasets.py  run_simulations.py
configs/: artifacts.yml
nd/: ACND.py  BBoK.py  BestOfK.py  NestedDichotomy.py  RPND.py  RandomGeneration.py  __init__.py
ndscape/: README.md  __init__.py  api.py  plot.py
scripts/: csv_to_configs.py  download_zenodo.py  make_ablation_summaries.py  make_ablation_tables.py  make_artifacts.py  make_dataset_plots.py  make_dataset_tables.py  make_paper_tables.py  make_simulation_plots.py  make_simulation_tables.py  moran_simulation_analysis.py  verify_artifacts.py
tests/: conftest.py  helpers.py  test_artifact.py  test_dt_simulation.py  test_embed_tree.py  test_nd_generators.py  test_nd_predict.py  test_order_tree.py  test_real_datasets.py  test_sample_trees.py  test_split_analyzer.py  test_tree_enumeration.py  test_tree_utilities.py
tests/fixtures/: artifact_D_hash_C10.json  artifact_D_hash_C19.json  artifact_D_hash_C6.json  artifact_D_hash_C7.json  artifact_D_hash_C8.json  artifact_D_hash_C9.json  artifact_coords_hash_C10.json  artifact_coords_hash_C6.json  (+36 more)
zenodo/: art_1_C10_N15000_s0_d2.joblib  art_1_C19_N15000_s0_d2.joblib  art_1_C6_N945_s0_d2.joblib  art_1_C7_N10395_s0_d2.joblib  art_1_C8_N15000_s0_d2.joblib  art_1_C9_N15000_s0_d2.joblib  bow_1_C6_N945_s0_d2.joblib  bow_1_C7_N10395_s0_d2.joblib  manifest.csv  rf_1_C6_N945_s0_d2.joblib  rf_1_C7_N10395_s0_d2.joblib
(+22 files in other folders)
